syntax = "proto3";
package wasmx;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "bitbadgeschain/x/wasmx/types";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "bitbadgeschain/x/wasmx/Params";
  option (gogoproto.equal) = true;

  // Set the status to active to indicate that contracts can be executed in begin blocker.
  bool is_execution_enabled = 1;

  // Maximum aggregate total gas to be used for the contract executions in the BeginBlocker.
  uint64 max_begin_block_total_gas = 2;

  // the maximum gas limit each individual contract can consume in the BeginBlocker.
  uint64 max_contract_gas_limit = 3;

  // min_gas_price defines the minimum gas price the contracts must pay to be executed in the BeginBlocker.
  uint64 min_gas_price = 4;
}